--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -32,7 +32,8 @@ License URL: http://creativecommons.org/licenses/by/3.0/
 <!-- //w3ls-weather -->
 <!-- copyright -->
 <div class="copyw3-agile">
-  <p> © 2017 Flatty Weather Report . All rights reserved | Design by <a href="http://w3layouts.com/" target="_blank">W3layouts.</a></p>
+
+  <p> © 2020 Flatty Weather Report . All rights reserved | Design by <a href="https://github.com/SonyaKorni" target="_blank">SonyaKorni.</a></p>
 </div>
 <!-- //copyright -->
 </body>
